# chat-server-client

./: .gitignore  CMakeLists.txt  README.md
sql/: data.sql  schema.sql  test.sql
src/: README.md  client.cpp  server.cpp  utils.cpp  utils.h
